<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:layout_margin="25dp">

    <TextView
        android:id="@+id/title_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_title"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/et_username_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:padding="20dp"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/title_sign_up"/>

    <EditText
        android:id="@+id/et_email_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="20dp"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/et_username_signUp"/>

    <EditText
        android:id="@+id/et_password_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:padding="20dp"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/et_email_signUp"/>

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginTop="60dp"
        android:layout_below="@id/et_password_signUp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        app:fabSize="normal"
        android:backgroundTint="#FF4500"
        android:layout_below="@+id/et_password_signIn"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_arrow_right"
        android:layout_alignParentRight="true" />

</RelativeLayout>